added secondBox with the links

--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
                     <a class="btn btn-primary" href="./bmw-car/engines.html" target="_blank" role="button">Mehr erfahren</a>
                 </div>
             </div>
+            <div class="secondBox fade-in">
+                <img src="./photos/bmw-history-pic.jpg" alt="Empfehlung">
+                <div class="boxContent">
+                    <p>BMW: Eine Reise durch Innovation und Tradition</p>
+                    <h1>Die Geschichte</h1>
+                    <a class="btn btn-primary" href="./infos-bmw/history.html" target="_blank" role="button">Mehr erfahren</a>
+                </div>
+            </div>
+        </div>
     </div>
     
 
