--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vorstellung der Seitenersteller</title>
+    <title>BMW About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/loadingAnimation.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/cars.css">
+    <link rel="stylesheet" href="../styles/aboutUs.css">
 </head>
 <body>
     <div class="startAnimation">
@@ -32,8 +33,8 @@
                       Autos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="index.html">Serien</a></li>
-                      <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
+                      <li><a class="dropdown-item" href="../bmw-car/index.html">Serien</a></li>
+                      <li><a class="dropdown-item" href="../bmw-car/engines.html">Motoren</a></li>
                       <li><a class="dropdown-item" href="x-models.html">X Modelle</a></li>
                     </ul>
                   </li>
@@ -57,6 +58,60 @@
               </div>
             </div>
           </nav>
+    </div>
+    <div class="row mb-2" style = "margin-left:32px;margin-right:32px;">
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" 
+                 style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <h5 class="card-title">Arda Dönmez</h5>
+                    <p class="card-text">Ein kleiner, effizienter Motor, ideal für die BMW 1er und 2er Serie.</p>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" 
+                 style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <h3 class="mb-0">Featured post 2</h3>
+                    <p class="card-text mb-auto">This is another card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-2" style = "margin-left:32px;margin-right:32px;">
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" 
+                 style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <h5 class="card-title">Arda Dönmez</h5>
+                    <p class="card-text">Ein kleiner, effizienter Motor, ideal für die BMW 1er und 2er Serie.</p>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" 
+                 style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <h3 class="mb-0">Featured post 2</h3>
+                    <p class="card-text mb-auto">This is another card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </html>
