--- a/infos-bmw/history.html
+++ b/infos-bmw/history.html
@@ -71,6 +71,15 @@
         </div>
     </div>
 
+    <div class="card" style="width: 45rem; height: 37rem;">
+        <img src="../photos/Karl%20Rapp.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Karl Rapp</h5>
+            <p class="card-text">Karl Rapp (1882–1962) war ein deutscher Ingenieur und Gründer der Rapp-Motorenwerke, die 1913 in München gegründet wurden und den Grundstein für die Bayerischen Motoren Werke (BMW) legten. Nach der Übernahme durch neue Investoren im Jahr 1917 verließ Rapp das Unternehmen, doch seine Arbeit war entscheidend für die Entwicklung von BMW.</p>
+            <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
