Fixed Gustav Otto picture

--- a/infos-bmw/history.html
+++ b/infos-bmw/history.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="card" style="width: 45rem; height: 37rem;">
-        <img src="../photos/Gustaf%20Otto.jpg" class="card-img-top" alt="...">
+        <img src="../photos/gustav-otto.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Gustav Otto</h5>
             <p class="card-text">Gustav Otto (1883–1926) war ein deutscher Ingenieur und Flugzeugpionier, der 1911 die Gustav Otto Flugmaschinenfabrik in München gründete. Seine Firma entwickelte und baute Flugzeuge, spielte aber nach finanziellen Schwierigkeiten eine Schlüsselrolle bei der Gründung der Bayerischen Flugzeugwerke (BFW), einem Vorläufer von BMW. Ottos Innovationsgeist trug wesentlich zur frühen Entwicklung der Luftfahrt und zur Geschichte von BMW bei.</p>
