Fixed external links

--- a/infos-bmw/history.html
+++ b/infos-bmw/history.html
@@ -67,7 +67,7 @@
         <div class="card-body">
             <h5 class="card-title">Geschichte</h5>
             <p class="card-text">Die Geschichte von BMW (Bayerische Motoren Werke) begann 1916, als das Unternehmen zunächst Flugzeugmotoren herstellte, insbesondere für den Ersten Weltkrieg. Nach dem Krieg wechselte BMW aufgrund von Einschränkungen der Flugzeugproduktion zu Motorrädern (1923) und später zu Automobilen (1928), mit dem BMW 3/15 als erstem Pkw. In den 1930er-Jahren machte sich BMW mit leistungsstarken Sportwagen und Luxusfahrzeugen einen Namen, bevor der Zweite Weltkrieg die Produktion wieder auf Flugzeugmotoren konzentrierte. Nach Kriegsende stand BMW kurz vor dem Bankrott, schaffte aber in den 1950er-Jahren mit der Isetta und später dem Ausbau der Mittelklasse- und Sportwagenserien den Durchbruch. Heute ist BMW ein weltweit führender Premiumhersteller, bekannt für Innovationen, Design und Leistung.</p>
-            <a href="https://www.bmw.at/de/index.html" class="btn btn-primary">Mehr erfahren</a>
+            <a href="https://www.bmwgroup.com/de/unternehmen/historie.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
 
@@ -76,7 +76,7 @@
         <div class="card-body">
             <h5 class="card-title">Karl Rapp</h5>
             <p class="card-text">Karl Rapp (1882–1962) war ein deutscher Ingenieur und Gründer der Rapp-Motorenwerke, die 1913 in München gegründet wurden und den Grundstein für die Bayerischen Motoren Werke (BMW) legten. Nach der Übernahme durch neue Investoren im Jahr 1917 verließ Rapp das Unternehmen, doch seine Arbeit war entscheidend für die Entwicklung von BMW.</p>
-            <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+            <a href="https://de.wikipedia.org/wiki/Karl_Rapp" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
 
@@ -85,7 +85,7 @@
         <div class="card-body">
             <h5 class="card-title">Gustav Otto</h5>
             <p class="card-text">Gustav Otto (1883–1926) war ein deutscher Ingenieur und Flugzeugpionier, der 1911 die Gustav Otto Flugmaschinenfabrik in München gründete. Seine Firma entwickelte und baute Flugzeuge, spielte aber nach finanziellen Schwierigkeiten eine Schlüsselrolle bei der Gründung der Bayerischen Flugzeugwerke (BFW), einem Vorläufer von BMW. Ottos Innovationsgeist trug wesentlich zur frühen Entwicklung der Luftfahrt und zur Geschichte von BMW bei.</p>
-            <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+            <a href="https://de.wikipedia.org/wiki/Gustav_Otto_(Flugzeugbauer)" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
 </main>
