--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -68,7 +68,7 @@
             <p class="card-text">BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge
                 mit Fokus auf Fahrdynamik, innovative Technik und elegantes Design für
                 vielfältige Bedürfnisse anbietet.</p>
-            <a href="https://www.bmw.at/de/index.html" class="btn btn-primary">Mehr erfahren</a>
+            <a href="https://www.bmw.at/de/index.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
 
@@ -79,7 +79,7 @@
             <p class="card-text">BMW Motorrad ist die Motorradsparte von BMW, die hochwertige Motorräder
                 für verschiedene Einsatzbereiche wie Sport, Touring und Adventure mit
                 fortschrittlicher Technik und charakteristischem Design herstellt.</p>
-            <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+            <a href="https://www.bmw-motorrad.at/de/home.html#/filter-alle" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
     <div class="card" style="width: 40rem; height: 35rem;">
