--- a/about-us/index.html
+++ b/about-us/index.html
@@ -26,7 +26,7 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="../about-us/index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -77,11 +77,11 @@
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" 
                  style="background-color: #212529; border: 1px solid #1b1e22 !important;">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <h3 class="mb-0">Featured post 2</h3>
+                    <h3 class="mb-0">Kerimcan Yagci</h3>
                     <p class="card-text mb-auto">This is another card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
+                    <img src="../photos/Yagci_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -91,11 +91,11 @@
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" 
                  style="background-color: #212529; border: 1px solid #1b1e22 !important;">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <h5 class="card-title">Arda Dönmez</h5>
+                    <h5 class="card-title">Daryan Mamsaleh</h5>
                     <p class="card-text">Ein kleiner, effizienter Motor, ideal für die BMW 1er und 2er Serie.</p>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
+                    <img src="../photos/Mamsaleh_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -104,11 +104,11 @@
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" 
                  style="background-color: #212529; border: 1px solid #1b1e22 !important;">
                 <div class="col p-4 d-flex flex-column position-static">
-                    <h3 class="mb-0">Featured post 2</h3>
+                    <h3 class="mb-0">Rron Gashi</h3>
                     <p class="card-text mb-auto">This is another card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
+                    <img src="../photos/Gashi_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
                 </div>
             </div>
         </div>
