Added main video, added picture/text, added Special car site

--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../styles/special.css">
+    <title>Sonderwagen-Seite</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/loadingAnimation.css">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/cars.css">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+
 </head>
 <body>
     <div class="startAnimation">
@@ -23,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="./about-us/index.html">Home</a>
+                    <a class="nav-link" href="../about-us/index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -36,16 +40,16 @@
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="../bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Infos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./infos-bmw/history.html">Geschichte</a></li>
-                      <li><a class="dropdown-item" href="./infos-bmw/index.html">Marken</a></li>
+                      <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
+                      <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./about-us/index.html">Über uns</a>
+                    <a class="nav-link" href="../about-us/index.html">Über uns</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -53,8 +57,16 @@
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
-            </div>
+            </div>  
           </nav>
     </div>
-</body>
-</html>
+    <body>
+      <video class="christmasvideo" style = "margin-top:-41px; filter:none;" src="../photos/BMW_vision_M_NEXT.mp4" autoplay muted loop></video>
+      <div class="gradient-overlay"></div>
+        <div class="text">
+            <img src ="../photos/BMW_vision_M_NEXT.png" style ="height:125px;>
+        </div>
+      <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+  </html>
