correction push, committed unsaved files

--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -64,7 +64,7 @@
       <video class="christmasvideo" style = "margin-top:-41px; filter:none;" src="../photos/BMW_vision_M_NEXT.mp4" autoplay muted loop></video>
       <div class="gradient-overlay"></div>
         <div class="text">
-            <img src ="../photos/BMW_vision_M_NEXT.png" style ="height:125px;>
+            <img src ="../photos/BMW_vision_M_NEXT.png" style ="height:125px;">
         </div>
       <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
