--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -62,10 +62,75 @@
     </div>
     <body>
       <video class="christmasvideo" style = "margin-top:-41px; filter:none;" src="../photos/BMW_vision_M_NEXT.mp4" autoplay muted loop></video>
-      <div class="gradient-overlay"></div>
         <div class="text">
             <img src ="../photos/BMW_vision_M_NEXT.png" style ="height:125px;">
         </div>
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" style ="margin-left:10%;margin-right:10%;">
+          <div class="col"style ="width:100%;margin-top:200px;">
+            <div class="card shadow-sm"style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+              <img src="../photos/BMW_vision_M_NEXT_side.jpg"style="border-top-left-radius: 5px;">
+              <div class="card-body">
+                <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision M NEXT</h4>
+                <p class="card-text" style="color:white">Der BMW Vision M NEXT ist eine futuristische Konzeptstudie, die einen spannenden Ausblick auf die Zukunft der Performance-Fahrzeuge von BMW bietet. Mit dem Vision M NEXT verfolgt BMW eine klare Vision für eine intelligente Mobilität, die Elektromobilität und sportliche Fahrdynamik miteinander vereint. Das Fahrzeug kombiniert einen leistungsstarken Plug-in-Hybridantrieb mit einer markanten Designsprache, die sowohl modern als auch dynamisch wirkt. Die aerodynamische Form, die scharfen Linien und die markanten Lichter vermitteln einen Eindruck von Geschwindigkeit und Präzision. Der Vision M NEXT setzt auf innovative Technologien wie ein hochentwickeltes Fahrerassistenzsystem und eine fortschrittliche, benutzerorientierte Schnittstelle, die den Fahrer mit der Fahrzeugintelligenz verbindet. Das Konzeptfahrzeug bietet zudem ein intuitives Fahrerlebnis mit einem Fokus auf Fahrerfreude, was durch den leistungsstarken Antriebsstrang und das agile Handling unterstützt wird. Mit dieser Studie zeigt BMW, wie die Zukunft von Performance und Nachhaltigkeit zusammengeführt werden kann, um ein außergewöhnliches Fahrerlebnis zu schaffen.</p>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col">
+            <div class="card shadow-sm"style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+              <img src="../photos/BMW_vision_M_NEXT_side.jpg"style="border-top-left-radius: 5px;">
+              <div class="card-body">
+                <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision M NEXT</h4>
+                <p class="card-text" style="color:white">Der BMW Vision M NEXT ist eine futuristische Konzeptstudie, die einen spannenden Ausblick auf die Zukunft der Performance-Fahrzeuge von BMW bietet. Mit dem Vision M NEXT verfolgt BMW eine klare Vision für eine intelligente Mobilität, die Elektromobilität und sportliche Fahrdynamik miteinander vereint. Das Fahrzeug kombiniert einen leistungsstarken Plug-in-Hybridantrieb mit einer markanten Designsprache, die sowohl modern als auch dynamisch wirkt. Die aerodynamische Form, die scharfen Linien und die markanten Lichter vermitteln einen Eindruck von Geschwindigkeit und Präzision. Der Vision M NEXT setzt auf innovative Technologien wie ein hochentwickeltes Fahrerassistenzsystem und eine fortschrittliche, benutzerorientierte Schnittstelle, die den Fahrer mit der Fahrzeugintelligenz verbindet. Das Konzeptfahrzeug bietet zudem ein intuitives Fahrerlebnis mit einem Fokus auf Fahrerfreude, was durch den leistungsstarken Antriebsstrang und das agile Handling unterstützt wird. Mit dieser Studie zeigt BMW, wie die Zukunft von Performance und Nachhaltigkeit zusammengeführt werden kann, um ein außergewöhnliches Fahrerlebnis zu schaffen.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm"style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+              <img src="../photos/BMW_vision_M_NEXT_side.jpg"style="border-top-left-radius: 5px;">
+              <div class="card-body">
+                <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision M NEXT</h4>
+                <p class="card-text" style="color:white">Der BMW Vision M NEXT ist eine futuristische Konzeptstudie, die einen spannenden Ausblick auf die Zukunft der Performance-Fahrzeuge von BMW bietet. Mit dem Vision M NEXT verfolgt BMW eine klare Vision für eine intelligente Mobilität, die Elektromobilität und sportliche Fahrdynamik miteinander vereint. Das Fahrzeug kombiniert einen leistungsstarken Plug-in-Hybridantrieb mit einer markanten Designsprache, die sowohl modern als auch dynamisch wirkt. Die aerodynamische Form, die scharfen Linien und die markanten Lichter vermitteln einen Eindruck von Geschwindigkeit und Präzision. Der Vision M NEXT setzt auf innovative Technologien wie ein hochentwickeltes Fahrerassistenzsystem und eine fortschrittliche, benutzerorientierte Schnittstelle, die den Fahrer mit der Fahrzeugintelligenz verbindet. Das Konzeptfahrzeug bietet zudem ein intuitives Fahrerlebnis mit einem Fokus auf Fahrerfreude, was durch den leistungsstarken Antriebsstrang und das agile Handling unterstützt wird. Mit dieser Studie zeigt BMW, wie die Zukunft von Performance und Nachhaltigkeit zusammengeführt werden kann, um ein außergewöhnliches Fahrerlebnis zu schaffen.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm"style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+              <img src="../photos/BMW_vision_M_NEXT_side.jpg"style="border-top-left-radius: 5px;">
+              <div class="card-body">
+                <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision M NEXT</h4>
+                <p class="card-text" style="color:white">Der BMW Vision M NEXT ist eine futuristische Konzeptstudie, die einen spannenden Ausblick auf die Zukunft der Performance-Fahrzeuge von BMW bietet. Mit dem Vision M NEXT verfolgt BMW eine klare Vision für eine intelligente Mobilität, die Elektromobilität und sportliche Fahrdynamik miteinander vereint. Das Fahrzeug kombiniert einen leistungsstarken Plug-in-Hybridantrieb mit einer markanten Designsprache, die sowohl modern als auch dynamisch wirkt. Die aerodynamische Form, die scharfen Linien und die markanten Lichter vermitteln einen Eindruck von Geschwindigkeit und Präzision. Der Vision M NEXT setzt auf innovative Technologien wie ein hochentwickeltes Fahrerassistenzsystem und eine fortschrittliche, benutzerorientierte Schnittstelle, die den Fahrer mit der Fahrzeugintelligenz verbindet. Das Konzeptfahrzeug bietet zudem ein intuitives Fahrerlebnis mit einem Fokus auf Fahrerfreude, was durch den leistungsstarken Antriebsstrang und das agile Handling unterstützt wird. Mit dieser Studie zeigt BMW, wie die Zukunft von Performance und Nachhaltigkeit zusammengeführt werden kann, um ein außergewöhnliches Fahrerlebnis zu schaffen.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm"style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+              <img src="../photos/BMW_vision_M_NEXT_side.jpg"style="border-top-left-radius: 5px;">
+              <div class="card-body">
+                <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision M NEXT</h4>
+                <p class="card-text" style="color:white">Der BMW Vision M NEXT ist eine futuristische Konzeptstudie, die einen spannenden Ausblick auf die Zukunft der Performance-Fahrzeuge von BMW bietet. Mit dem Vision M NEXT verfolgt BMW eine klare Vision für eine intelligente Mobilität, die Elektromobilität und sportliche Fahrdynamik miteinander vereint. Das Fahrzeug kombiniert einen leistungsstarken Plug-in-Hybridantrieb mit einer markanten Designsprache, die sowohl modern als auch dynamisch wirkt. Die aerodynamische Form, die scharfen Linien und die markanten Lichter vermitteln einen Eindruck von Geschwindigkeit und Präzision. Der Vision M NEXT setzt auf innovative Technologien wie ein hochentwickeltes Fahrerassistenzsystem und eine fortschrittliche, benutzerorientierte Schnittstelle, die den Fahrer mit der Fahrzeugintelligenz verbindet. Das Konzeptfahrzeug bietet zudem ein intuitives Fahrerlebnis mit einem Fokus auf Fahrerfreude, was durch den leistungsstarken Antriebsstrang und das agile Handling unterstützt wird. Mit dieser Studie zeigt BMW, wie die Zukunft von Performance und Nachhaltigkeit zusammengeführt werden kann, um ein außergewöhnliches Fahrerlebnis zu schaffen.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm"style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+              <img src="../photos/BMW_vision_M_NEXT_side.jpg"style="border-top-left-radius: 5px;">
+              <div class="card-body">
+                <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision M NEXT</h4>
+                <p class="card-text" style="color:white">Der BMW Vision M NEXT ist eine futuristische Konzeptstudie, die einen spannenden Ausblick auf die Zukunft der Performance-Fahrzeuge von BMW bietet. Mit dem Vision M NEXT verfolgt BMW eine klare Vision für eine intelligente Mobilität, die Elektromobilität und sportliche Fahrdynamik miteinander vereint. Das Fahrzeug kombiniert einen leistungsstarken Plug-in-Hybridantrieb mit einer markanten Designsprache, die sowohl modern als auch dynamisch wirkt. Die aerodynamische Form, die scharfen Linien und die markanten Lichter vermitteln einen Eindruck von Geschwindigkeit und Präzision. Der Vision M NEXT setzt auf innovative Technologien wie ein hochentwickeltes Fahrerassistenzsystem und eine fortschrittliche, benutzerorientierte Schnittstelle, die den Fahrer mit der Fahrzeugintelligenz verbindet. Das Konzeptfahrzeug bietet zudem ein intuitives Fahrerlebnis mit einem Fokus auf Fahrerfreude, was durch den leistungsstarken Antriebsstrang und das agile Handling unterstützt wird. Mit dieser Studie zeigt BMW, wie die Zukunft von Performance und Nachhaltigkeit zusammengeführt werden kann, um ein außergewöhnliches Fahrerlebnis zu schaffen.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm"style="background-color: #212529; border: 1px solid #1b1e22 !important;">
+              <img src="../photos/BMW_vision_M_NEXT_side.jpg"style="border-top-left-radius: 5px;">
+              <div class="card-body">
+                <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision M NEXT</h4>
+                <p class="card-text" style="color:white">Der BMW Vision M NEXT ist eine futuristische Konzeptstudie, die einen spannenden Ausblick auf die Zukunft der Performance-Fahrzeuge von BMW bietet. Mit dem Vision M NEXT verfolgt BMW eine klare Vision für eine intelligente Mobilität, die Elektromobilität und sportliche Fahrdynamik miteinander vereint. Das Fahrzeug kombiniert einen leistungsstarken Plug-in-Hybridantrieb mit einer markanten Designsprache, die sowohl modern als auch dynamisch wirkt. Die aerodynamische Form, die scharfen Linien und die markanten Lichter vermitteln einen Eindruck von Geschwindigkeit und Präzision. Der Vision M NEXT setzt auf innovative Technologien wie ein hochentwickeltes Fahrerassistenzsystem und eine fortschrittliche, benutzerorientierte Schnittstelle, die den Fahrer mit der Fahrzeugintelligenz verbindet. Das Konzeptfahrzeug bietet zudem ein intuitives Fahrerlebnis mit einem Fokus auf Fahrerfreude, was durch den leistungsstarken Antriebsstrang und das agile Handling unterstützt wird. Mit dieser Studie zeigt BMW, wie die Zukunft von Performance und Nachhaltigkeit zusammengeführt werden kann, um ein außergewöhnliches Fahrerlebnis zu schaffen.</p>
+              </div>
+            </div>
+          </div>
       <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
